--- a/css/main.scss
+++ b/css/main.scss
@@ -3,12 +3,16 @@
 @import "./headerFolder/header_tb2";
 @import "./navFolder/nav_";
 
-
 nav {
+  margin: 10px 0px;
+  width: 100%;
+  height: 25px;
   @extend .border;
 }
-
-.nav {
+article {
+  width: 100%;
+  height: 100%;
+  position: relative;
   @extend .border;
 }
 
@@ -18,8 +22,7 @@ header {
   top: 0;
   position: relative;
   width: 100%;
-  height: 120px;
-
+  height: 100px;
 }
 
 .border {
